aau/sf_autobackup/objects/ps_Class__c.object
<CustomObject>
    <fields>
        <fullName>Catalog_Nbr__c</fullName>
        <label>Catalog Nbr</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Section__c</fullName>
        <label>Class Section</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Component__c</fullName>
        <description>Short Name of PeopleSoft&apos;s translate value for SSR_COMPONENT</description>
        <label>Course Component</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Description__c</fullName>
        <label>Course Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Course_Title__c</fullName>
        <label>Course Title</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Online_Class__c</fullName>
        <formula>IF( CONTAINS( Class_Section__c , &apos;OL&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <label>Online Class?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Psft_Ext_Id__c</fullName>
        <description>Pipe delimited Concatenation of STRM and CLASS_NBR</description>
        <externalId>true</externalId>
        <label>Psft_Ext_Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <referenceTo>ps_Term__c</referenceTo>
        <relationshipName>Class_Sections</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>ps_Class</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Title__c</columns>
        <columns>Term__c</columns>
        <columns>Subject__c</columns>
        <columns>Catalog_Nbr__c</columns>
        <columns>Class_Section__c</columns>
        <columns>Online_Class__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ps_Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>